# sz-rust-sdk-configtool

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMAND_PROCESSOR_DESIGN.md  COMMAND_PROCESSOR_IMPLEMENTATION.md  Cargo.toml  FFI_IMPLEMENTATION.md  FINAL_VALIDATION.md  PARAM_STRUCT_DESIGN.md  README.md  REFACTORING_PROGRESS.md  SESSION_SUMMARY.md  create_senzing_lib.sh  deny.toml  refactor_params.py
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: API.md  CONTRIBUTING.md  FFI_GUIDE.md  c-api.html  index.html
examples/: basic_usage.rs  c_ffi_example.c  command_processor.rs  datasource_management.rs  feature_operations.rs  process_real_upgrade.rs  validate_config.rs
include/: libSzConfigTool.h
src/: attributes.rs  behavior_overrides.rs  command_processor.rs  config_sections.rs  datasources.rs  elements.rs  error.rs  features.rs  ffi.rs  ffi_phase2.md  fragments.rs  generic_plans.rs  hashes.rs  helpers.rs  lib.rs  rules.rs  system_params.rs  thresholds.rs  versioning.rs
src/calls/: comparison.rs  distinct.rs  expression.rs  mod.rs  standardize.rs
src/functions/: candidate.rs  comparison.rs  distinct.rs  expression.rs  matching.rs  mod.rs  scoring.rs  standardize.rs  validation.rs
tests/: lib_tests.rs  test_comprehensive_upgrade.rs  test_set_feature_extended.rs  test_upgrade_script.rs
tests/c/: CMakeLists.txt  Makefile  test_basic  test_basic.c
