[package]
name = "sz_configtool_lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Brian Macy <bmacy@senzing.com>"]
description = "Pure Rust library for manipulating Senzing configuration JSON documents"
license = "Apache-2.0"
repository = "https://github.com/brianmacy/sz-rust-sdk-configtool"
keywords = ["senzing", "configuration", "json", "entity-resolution"]
categories = ["config", "data-structures"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.24"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
